# JCCD-X-V6

./: .gitignore  ABLATION_STUDY_COMPLETE_GUIDE.md  ABLATION_STUDY_PAPER_GUIDE.md  ABLATION_STUDY_QUICK_REF.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LSH_OPTIMIZATION_RESULTS.md  LSH_PERFORMANCE_ANALYSIS.md  METHODOLOGY.md  METHODOLOGY_SECTION.md  Makefile  PIPELINE_FIX_SUMMARY.md  PROGRESS_REPORT.md  README.md  RESULTS_AND_METRICS.md  SYSTEM_ARCHITECTURE.md  TESTING_DATASET_FIX.md  build.zig  pyproject.toml  sweep.py  sweep_results.json
artifacts/evaluation_comprehensive/: evaluation_summary.json  full_pipeline_metrics.json  model_comparison.json
artifacts/evaluation_limited/: pipeline_metrics.json  test_metrics.json
artifacts/models_limited/: best_model.joblib  best_model_name.joblib
scripts/: check_pipeline.py  run_ablation.sh  run_ablation_study.sh  run_all.sh  run_calibration.sh  run_comprehensive_evaluation.sh  run_data_prep.sh  run_features.sh  run_lsh_sweep.sh  run_memory_profile.sh  run_pipeline.sh  run_preprocessing.sh  run_quick_test.sh  run_rfe.sh  run_sensitivity.sh  run_stability.sh  run_tokenization.sh  run_training.sh  test_all.sh
src/bindings/: ast_stats.py  common.py  features.py  minhash.py  normalization.py  shingling.py
src/python/evaluation/: ablation.py  comprehensive_evaluation.py  metrics.py  plots.py  (+4 more)
tests/: conftest.py  test_data_prep.py  test_evaluation.py  test_feature_selection.py  test_features.py  test_lsh_tuning.py  test_normalization.py  test_tokenizer.py  test_training.py
(+18 files in other folders)
