[tool.poetry]
name = "jccd-x"
version = "0.1.0"
description = "Java Code Clone Detection pipeline for Type 1-3 syntactic clones using Python + Zig"
authors = ["JCCD-X Team"]
readme = "README.md"
packages = [{include = "src/python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
xgboost = "^2.0"
lightgbm = "^4.0"
matplotlib = "^3.7"
seaborn = "^0.12"
plotly = "^5.15"
tree-sitter = "^0.23"
tree-sitter-java = "^0.23"
rapidfuzz = "^3.0"
cffi = "^1.15"
jupyter = "^1.0"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
ruff = "^0.1"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
